--- a/doodle/templates/about.html
+++ b/doodle/templates/about.html
@@ -71,7 +71,7 @@
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
         <div class="team-member text-center">
           <div class="member-img">
-            <img src="{% static 'assets/img/profile-img.jpg' %}" class="img-fluid rounded-circle" alt="Camila Sanjuan" style="width: 180px; height: 180px; object-fit: cover;">
+            <img src="{% static 'assets/img/profile/camila.jpg' %}" class="img-fluid rounded-circle" alt="Camila Sanjuan" style="width: 180px; height: 180px; object-fit: cover;">
           </div>
           <div class="member-info">
             <h4>Camila Sanjuan</h4>
