--- a/doodle/templates/partials/_navbar.html
+++ b/doodle/templates/partials/_navbar.html
@@ -3,7 +3,7 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
         <a href="{% url 'home' %}"><img src="https://i.postimg.cc/1zwrt7wZ/IMG-6164-removebg-preview.png" alt="Doodle Logo" class="logo-img" style="width: 100px; height: auto;"></a>
       </a>
 
