contact page done
Co-authored-by: kyuril <kyuril@users.noreply.github.com>
Co-authored-by: camsan26 <camsan26@users.noreply.github.com>

--- a/doodle/static/assets/css/main.css
+++ b/doodle/static/assets/css/main.css
@@ -64,6 +64,7 @@ body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
+  overflow-x: hidden;
 }
 
 a {
@@ -213,6 +214,8 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /* Desktop Navigation */
+
+
 @media (min-width: 1200px) {
   .navmenu {
     padding: 0;
