--- a/doodle/templates/partials/_navbar.html
+++ b/doodle/templates/partials/_navbar.html
@@ -1,34 +1,41 @@
 {% load static %}
 <header id="header" class="header d-flex align-items-center light-background sticky-top" style="background-color: white;">
-    <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
+  <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <a href="{% url 'home' %}"><img src="https://i.postimg.cc/1zwrt7wZ/IMG-6164-removebg-preview.png" alt="Doodle Logo" class="logo-img" style="width: 100px; height: auto;"></a>
+    <!-- Logo aligned to the left -->
+    <div class="d-flex align-items-center me-auto">
+      <a href="{% url 'home' %}" class="d-flex align-items-center">
+        <img src="https://i.postimg.cc/1zwrt7wZ/IMG-6164-removebg-preview.png" alt="Doodle Logo" class="logo-img" style="width: 100px; height: auto;">
       </a>
+    </div>
 
-      <nav id="navmenu" class="navmenu" style="background-color: white;">
-        <ul>
-          <li><a href="{% url 'home' %}" class="{% if request.path == '/' or 'home' in request.path %}active{% endif %}">Home</a></li>
-          {% if user.is_authenticated %}
-            <li><a href="{% url 'dashboard' %}" class="{% if 'dashboard' in request.path %}active{% endif %}">Dashboard</a></li>
-          {% endif %}
-          {% if user.is_authenticated %}
+    <!-- Navigation Menu -->
+    <nav id="navmenu" class="navmenu" style="background-color: white;">
+      <ul>
+        <li><a href="{% url 'home' %}" class="{% if request.path == '/' or 'home' in request.path %}active{% endif %}">Home</a></li>
+
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'dashboard' %}" class="{% if 'dashboard' in request.path %}active{% endif %}">Dashboard</a></li>
           <li><a href="{% url 'tasks:task_list' %}" class="{% if request.path == '/tasks/' or request.path == '/tasks' %}active{% endif %}">Tasks</a></li>
           <li><a href="{% url 'tasks:task_calendar' %}" class="{% if 'task_calendar' in request.path %}active{% endif %}">Task Calendar</a></li>
-            <li><a href="{% url 'logout' %}">Logout</a></li>
-          {% else %}
-            <li><a href="{% url 'login' %}" class="{% if 'login' in request.path %}active{% endif %}">Login</a></li>
-            <li><a href="{% url 'register' %}" class="{% if 'register' in request.path %}active{% endif %}">Register</a></li>
-          {% endif %}
-          <li class="dropdown"><a href="#" class="{% if 'about' in request.path or 'contact' in request.path %}active{% endif %}"><span>Get to Know Us!</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="{% url 'about' %}" class="{% if 'about' in request.path %}active{% endif %}">About</a></li>
-              <li><a href="{% url 'contact' %}" class="{% if 'contact' in request.path %}active{% endif %}">Contact</a></li>
-            </ul>
-          </li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-    </div>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+          <li><a href="{% url 'login' %}" class="{% if 'login' in request.path %}active{% endif %}">Login</a></li>
+          <li><a href="{% url 'register' %}" class="{% if 'register' in request.path %}active{% endif %}">Register</a></li>
+        {% endif %}
+
+        <li class="dropdown">
+          <a href="#" class="{% if 'about' in request.path or 'contact' in request.path %}active{% endif %}">
+            <span>Get to Know Us!</span> <i class="bi bi-chevron-down toggle-dropdown"></i>
+          </a>
+          <ul>
+            <li><a href="{% url 'about' %}" class="{% if 'about' in request.path %}active{% endif %}">About</a></li>
+            <li><a href="{% url 'contact' %}" class="{% if 'contact' in request.path %}active{% endif %}">Contact</a></li>
+          </ul>
+        </li>
+      </ul>
+      <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+    </nav>
+
+  </div>
 </header>
