--- a/doodle/templates/about.html
+++ b/doodle/templates/about.html
@@ -29,7 +29,7 @@
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
         <div class="team-member text-center">
           <div class="member-img">
-            <img src="{% static 'assets/img/profile-img.jpg' %}" class="img-fluid rounded-circle" alt="Polina Smolyanski" style="width: 180px; height: 180px; object-fit: cover;">
+            <img src="https://ik.imagekit.io/rmlbayysp/1749532327348-IMG_1745_WtT7m_BB9.jpg" class="img-fluid rounded-circle" alt="Polina Smolyanski" style="width: 180px; height: 180px; object-fit: cover;">
           </div>
           <div class="member-info">
             <h4>Polina Smolyanski</h4>
@@ -43,7 +43,7 @@
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
         <div class="team-member text-center">
           <div class="member-img">
-            <img src="{% static 'assets/img/profile-img.jpg' %}" class="img-fluid rounded-circle" alt="Kyuri Lim" style="width: 180px; height: 180px; object-fit: cover;">
+            <img src="https://ik.imagekit.io/rmlbayysp/1749532890197-Screenshot_2025-06-10_at_1.21.25_AM_qZ5_HVIsc.png" class="img-fluid rounded-circle" alt="Kyuri Lim" style="width: 180px; height: 180px; object-fit: cover;">
           </div>
           <div class="member-info">
             <h4>Kyuri Lim</h4>
@@ -57,7 +57,7 @@
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
         <div class="team-member text-center">
           <div class="member-img">
-            <img src="{% static 'assets/img/profile-img.jpg' %}" class="img-fluid rounded-circle" alt="Grace Jung" style="width: 180px; height: 180px; object-fit: cover;">
+            <img src="https://ik.imagekit.io/rmlbayysp/1749532790862-Screenshot_2025-06-10_at_1.19.07_AM_EZKWZq_B-.png" class="img-fluid rounded-circle" alt="Grace Jung" style="width: 180px; height: 180px; object-fit: cover;">
           </div>
           <div class="member-info">
             <h4>Grace Jung</h4>
@@ -71,7 +71,7 @@
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
         <div class="team-member text-center">
           <div class="member-img">
-            <img src="{% static 'assets/img/profile/camila.jpg' %}" class="img-fluid rounded-circle" alt="Camila Sanjuan" style="width: 180px; height: 180px; object-fit: cover;">
+            <img src="https://ik.imagekit.io/rmlbayysp/1749532651830-Screenshot_2025-06-10_at_1.17.27_AM_SvlqcIREg.png" class="img-fluid rounded-circle" alt="Camila Sanjuan" style="width: 180px; height: 180px; object-fit: cover;">
           </div>
           <div class="member-info">
             <h4>Camila Sanjuan</h4>
