--- a/doodle/templates/index.html
+++ b/doodle/templates/index.html
@@ -9,7 +9,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <!-- <h2 style="color: white;">Doodle!</h2> -->
-            <div style="position: relative; width: 100%; height: 300px;">
+            <div style="position: relative; width: 100%; height: 300px; overflow: hidden;">
               <img src="https://i.postimg.cc/1zwrt7wZ/IMG-6164-removebg-preview.png" alt="" 
                   style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); max-width: 100%; height: auto; z-index: 10;">
             </div>
