--- a/doodle/templates/accounts/register.html
+++ b/doodle/templates/accounts/register.html
@@ -5,7 +5,7 @@
     <div class="col-md-8">
       <div class="card shadow">
         <div class="card-header bg-primary text-white">
-          <h3 class="mb-0">Student Registration</h3>
+          <h3 class="mb-0" style="color:white; padding:5px;">Student Registration</h3>
         </div>
         <div class="card-body">
           <form method="POST">
